v1.14.1 (1.12.2-nova): 全量基准迁入并跑绿；版本号统一回 1.14.1
把 1.20.1 基座的全量基准迁到本 fork：33 个测试类 / 230 条用例，
0 失败 0 错误 0 跳过，逐类计数与基座一致（实测 build/test-results/test/*.xml）。

- build.gradle: 去掉 `exclude 'com/ae2vm/addon/bench/**'`。原来必须整包排除
  bench，唯一原因是 bench/BenchKeyType 继承 AEKeyType -> ForgeRegistryEntry，
  类初始化就会拉起 GameData.<clinit>，在没有 MC 引导的单测 JVM 里必炸。
- 删掉 bench/BenchKeyType.java：bench 的键改用真实 AEItemKey 包 BenchItemStack，
  `(AEItemKey) key` 的强转照样成立，而 AEKeyType/GameData 彻底不在加载路径上。
- bench/ 与 com/moakiee/ 那批 Java 16 语法源码降级到 Java 8：新增 bench/J8.java
  提供 List.of / Map.of / List.copyOf / Map.copyOf 的等价物，做法与 1.12.2-nova 一致。
- 新增测试替身 appeng/core/Api.java：让 StorageChannels.items() 在没有 MC 引导时
  也能拿到一个真实 IItemList。不能用 AE2 自带的 appeng.util.item.ItemList ——
  它字节码里调 MC 的混淆名方法，而测试类路径上是 mapped 名，会 NoSuchMethodError。
- 新增 TestAeStacks / BenchItemStack / VmMissingAfterStockRefillTest /
  V8BridgeQuantityTest（§22 量纲契约 + 桥接层候选语义）。
- AEKey.java: 去掉指向已删 BenchKeyType 的那句 javadoc。

版本号：按决定不升版，七个 fork 统一 mod_version=1.14.1（与 1.17.1 及以上的
fork 保持一致）。